syntax = "proto3";

service LocationService {
  rpc AddLocation (LocationRequest) returns (LocationResponse);
  rpc UpdateLocation (LocationUpdateRequest) returns (LocationResponse);
  rpc GetLocation (LocationNameRequest) returns (LocationResponse);
  rpc LoginLocation (LocationLoginRequest) returns (LocationResponse);
}

// Requests

message LocationRequest {
  string name = 1;
  int32 maxCapacity = 2;
  int32 currentCapacity = 3;
  bool isMatriz = 4;
}

message LocationUpdateRequest {
  int32 id = 1;
  string name = 2;
  int32 maxCapacity = 3;
  int32 currentCapacity = 4;
  string isMatriz = 5;
}

message LocationNameRequest {
  string name = 1;
}

message LocationLoginRequest {
  string name = 1;
}

// Responses

message LocationResponse {
  string message = 1;
  bool success = 2;
}