syntax = "proto3";

import "google/protobuf/empty.proto";

service ProductLocationService {
  rpc AddProductLocation (ProductLocationRequest) returns (ProductLocationResponse);
  rpc UpdateProductLocation (ProductLocationUpdateRequest) returns (ProductLocationResponse);
  rpc GetProductLocationById (ProductLocationIdRequest) returns (ProductLocationGetResponse);
  rpc GetAllProductLocations (google.protobuf.Empty) returns (ProductLocationGetResponseList);
  rpc DeleteProductLocation (ProductLocationDeleteRequest) returns (ProductLocationResponse);
  rpc MoveProductLocation (ProductLocationMoveRequest) returns (ProductLocationResponse);
}

// Requests

message ProductLocationRequest {
  int32 productId = 1;
  int32 locationId = 2;
  int32 quantity = 3;
}

message ProductLocationUpdateRequest {
  int32 id = 1;
  int32 productId = 2;
  int32 locationId = 3;
  int32 quantity = 4;
}

message ProductLocationIdRequest {
  int32 Id = 1;
}

message ProductLocationDeleteRequest {
  int32 id = 1;
}

message ProductLocationMoveRequest {
  int32 id = 1;
  int32 fromLocationId = 2;
  int32 toLocationId = 3;
  int32 quantity = 4;
}

// Responses

message ProductLocationResponse {
  string message = 1;
  bool success = 2;
}

message ProductLocationGetResponse {
  int32 id = 1;
  string name = 2;
  int32 productId = 3;
  ProductData product = 4;
  int32 locationId = 5;
  LocationData location = 6;
  int32 quantity = 7;
}

message ProductLocationGetResponseList {
  repeated ProductLocationGetResponse productLocations = 1;
}

message ProductData {
  int32 id = 1;
  string brand = 2;
  string name = 3;
  float costUnit = 4;
  float salePrice = 5;
}

message LocationData {
  int32 id = 1;
  string name = 2;
  int32 maxCapacity = 3;
  int32 currentCapacity = 4;
  bool isMatriz = 5;
}